2006-03-21  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.5.
	(OCTAVE_API_VERSION): Now api-v18.
	(OCTAVE_RELEASE_DATE): Now 2006-03-20.

2006-03-21  David bateman  <dbateman@free.fr>

	* DLD-FUNCTIONS/getrusage.cc (Fgetrusage): Use GetProcessTimes for
	MinGW to obtain user and system times.

2006-03-17  John W. Eaton  <jwe@octave.org>

	* strfns.cc (F__list_in_columns__): New function.

2006-03-16  Bill Denney  <bill@givebillmoney.com>

	* DLD-FUNCTIONS/time.cc: Improve @seealso entries in doc strings.

2006-03-16  John W. Eaton  <jwe@octave.org>

	* __gnuplot_raw__.l (F__gnuplot_show__): Temporarily use DEFCMD
	instead of DEFUN.
	(symbols_of___gnuplot_raw__): Temporarily mark __gnuplot_plot__,
	__gnuplot_set__, __gnuplot_splot__, and __gnuplot_replot__ as raw
	commands.

	* variables.cc (is_marked_as_rawcommand, unmark_rawcommand,
	mark_as_rawcommand): Temporarily not static.
	* variables.h: Temporarily Provide decls.

2006-03-16  David Bateman  <dbateman@free.fr>

	* sparse-xdiv.cc (result_ok): delete.
	(xdiv, xleftdiv): Simplify to use version of SpareMatrix::solve
	and SparseComplexMatrix::solve which internally treats rectangular
	and singular matrices.
	* DLD-FUNCTIONS/luinc.cc: Remove error test for singular matrix as
	QR solver now implemented.
	* DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): Paranoid check on 
	error_state. Disable tests for the detection of underdetermined 
	lower and over-determined upper matrix due to problems with 
	non minimum norm solutions.
	* DLD-FUNCTIONS/spqr.cc: Warning for issue of use of Fspqr for
	under-determined problems.

2006-03-16  John W. Eaton  <jwe@octave.org>

	* __gnuplot_raw__.l: Move here from DLD-FUNCTIONS/__gnuplot_raw__.l.
	Use DEFUN, not DEFUN_DLD.  Include defun.h, not defun-dld.h.
	(gnuplot::do_init):Move guts to symbols_of___gnuplot_raw__.
	(symbols_of___gnuplot_raw__): New function.

	* Makefile.in (DLD_XSRC): Delete __gnuplot_raw__.l from the list.