@@ -265,7 +265,7 @@ public:
 
   uint64NDArray uint64_array_value (void) const;
 
-  string_vector all_strings (bool pad = false, bool force = false) const;
+  string_vector all_strings (void) const;
 
   std::string string_value (bool force = false) const;
 
