@@ -1,3 +1,8 @@
+2006-03-21  John W. Eaton  <jwe@octave.org>
+
+	* test_system.m: Use cell arrays of character strings in fnmatch
+	tests.
+
 2006-03-16  John W. Eaton  <jwe@octave.org>
 
 	* test_system.m: End all *pwent tests with a call to endpwent.
